# webmarket

./: .gitignore  README.md  database.sqlite3  index.html  pyproject.toml
client/: index.html
client/css/: style.css
client/js/: auth-check.js  authButton.js  authorization.js  filters.js  logoutButton.js  registration.js  sort.js
client/pages/: catalog.html  delivery.html  entrance.html  personal_account.html  product-gold-ring.html  registration.html
css/: style.css
pages/: catalog.html  delivery.html  personal account.html  product-gold-ring.html.html  registration.html
probaProecta/client/js/: auth-check.js  filters.js  registration.js  script.js  search.js  sort.js
probaProecta/client/pages/: catalog.html  delivery.html  entrance.html  product-gold-ring.html  registration.html
server/: database.sqlite3  instruction.md  main.py  pyproject.toml
server/api_v1/: __init__.py
server/api_v1/auth/: auth.py  user_manager.py  views.py
server/api_v1/products/: crud.py  filter.py  schemas.py  views.py
server/api_v1/users/: crud.py  schemas.py  views.py
server/core/: config.py
server/core/models/: __init__.py  base_model.py  database_helper.py  order.py  product.py  user.py
server/src/: Main.py  database.db  database_helper.py
server/src/model/: Database.py  Schemas.py
server/src/routers/: User.py
server/src/routers/comments/: Comment.py  views.py
server/src/routers/products/: Product.py  views.py
server/src/routers/users/: User.py  views.py
