[project]
name = "webmarket"
version = "0.1.0"
description = ""
authors = [
    {name = "VMExite",email = "vadimmalkov26@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "pydantic[email] (>=2.11.5,<3.0.0)",
    "fastapi-users[sqlalchemy] (>=14.0.1,<15.0.0)",
    "pytest (>=8.4.0,<9.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
